--- a/tasks/templates/list.html
+++ b/tasks/templates/list.html
@@ -46,7 +46,7 @@
 	}
 
 </style>
-
+<title>To-do-application</title>
 <div class="center-column">
     <h3 style="text-align:center;"><b>TO-DO List</b></h3>
 	<form method="POST" action="/">
